# ackermann_controller

./: .travis.yml  CMakeLists.txt  LICENSE  Proposal.docx  README.md
app/: CMakeLists.txt  controller.cpp  forwardkinematics.cpp  inversekinematics.cpp  main  main.cpp  pbPlots.cpp  robot.cpp  robotkinematics.cpp  sensor.cpp  supportLib.cpp
doxygen/: Doxyfile
doxygen/html/: annotated.html  annotated_dup.js  class_bar_environment-members.html  class_bar_environment.html  class_base-members.html  class_base.html  class_biggest_int_convertible-members.html  class_biggest_int_convertible.html  class_common_test-members.html  class_common_test.html  class_conversion_helper_base.html  class_conversion_helper_derived.html  class_counter-members.html  class_counter.html  class_disabled_test.html  class_expect_failure_test-members.html  class_expect_failure_test.html  class_failed_test.html  class_failing_param_test.html  class_fatal_failure_in_fixture_constructor_test-members.html  class_fatal_failure_in_fixture_constructor_test.html  class_fatal_failure_in_set_up_test-members.html  class_fatal_failure_in_set_up_test.html  class_field_helper-members.html  (+2108 more)
include/: controller.hpp  forwardkinematics.hpp  inversekinematics.hpp  pbPlots.hpp  robot.hpp  robotkinematics.hpp  sensor.hpp  supportLib.hpp
phase1/: AIP_v1.1.xlsx  readme.md
proposal/: proposal_video.txt
results/: cppcheck.txt  cpplint.txt
test/: CMakeLists.txt  controller_test.cpp  forwardkinematics_test.cpp  inversekinematics_test.cpp  main.cpp  robot_test.cpp  robotkinematics_test.cpp  sensor_test.cpp
(+66 files in other folders)
